YAMLs/QA/Ingress/aks-lt-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: aks-lt-ingress
  namespace: aks-lt-qa
  annotations:    
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/enable-cors: "true"    
spec:
  tls:
  - hosts:
    - "*.internal.wkshpdev.com"
    secretName: aks-lt-tls-secret
  rules:   
  - host: loadtest-qa.internal.wkshpdev.com
    http:
      paths:
      - path: /?(.*)
        backend:          
          serviceName: api-proxy-svc
          servicePort: 80
